Revert "Remove redundant TypeConstant casts and chain register/resolve calls"
This reverts commit 30f2a37b6ba9be8531c9d3a2efaefbf5062beef7.