@@ -1347,7 +1347,7 @@ public abstract class Component
         }
 
         if (matches.size() == 1) {
-            return matches.getFirst();
+            return matches.get(0);
         }
 
         return new CompositeComponent(this, matches);
@@ -1519,7 +1519,7 @@ public abstract class Component
         }
 
         if (matches.size() == 1) {
-            return matches.getFirst();
+            return matches.get(0);
         }
 
         return new CompositeComponent(this, matches);
@@ -1961,12 +1961,9 @@ public abstract class Component
     /**
      * Clone this component's body, but not its siblings nor its children.
      *
-     * @param <T>  the expected component type
-     *
      * @return a clone of this component, sans siblings and sans children
      */
-    @SuppressWarnings("unchecked")
-    protected <T extends Component> T cloneBody() {
+    protected Component cloneBody() {
         Component that;
         try {
             that = (Component) super.clone();
@@ -1989,7 +1986,22 @@ public abstract class Component
         that.m_childByName = null;
         that.m_abChildren  = null;
 
-        return (T) that;
+        return that;
+    }
+
+    /**
+     * Clone this component's body with proper type inference for generic contexts.
+     * <p>
+     * This method provides type-safe cloning when the caller knows the specific component type
+     * but is working through a generic type parameter.
+     *
+     * @param <T>  the expected component type
+     *
+     * @return a clone of this component, sans siblings and sans children
+     */
+    @SuppressWarnings("unchecked")
+    protected final <T extends Component> T cloneBodyAs() {
+        return (T) cloneBody();
     }
 
     /**
